<resources>
    <string name="app_name">옹기종기</string>
    <string name="id">아이디</string>
    <string name="pwd">비밀번호</string>
    <string name="pwd2">비밀번호확인</string>
    <string name="pwdSearch">비밀번호찾기</string>
    <string name="name">이름</string>
    <string name="nickname">닉네임</string>
    <string name="gender">성별</string>
    <string name="signUp">회원가입</string>
    <string name="signUpExecute">회원가입하기</string>
    <string name="man">남자</string>
    <string name="woman">여자</string>
    <string name="logIn">Log In</string>
    <string name="logOut">로그아웃</string>
    <string name="PW">PW</string>
    <string name="ID">ID</string>
    <string name="r_user">회원 로그인</string>
    <string name="r_manager">관리자 로그인</string>
    <string name="submit">등록하기</string>
    <string name="reqPersonnel">모집인원</string>
    <string name="reqGender">모집성별</string>
    <string name="roomTitle">방 제목</string>
    <string name="roomCreate">방 생성하기</string>
    <string name="roomDetail">방 상세정보</string>
    <string name="roomExit">방 나가기</string>
    <string name="roomDelete">방 삭제하기</string>
    <string name="hour">시</string>
    <string name="minute">분</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="hours">시간</string>
    <string name="other">기타</string>
    <string name="date">날짜</string>
    <string name="restaurant">식당</string>
    <string name="hopeRest">희망식당</string>
    <string name="noProb">무관</string>
    <string name="loading">Loading…</string>
    <string name="myChatList">내 대화방 목록</string>
    <string name="chatList">대화방 목록</string>
    <string name="change">변경하기</string>
    <string name="save">저장하기</string>
    <string name="delete">삭제하기</string>
    <string name="infoChange">개인정보 변경</string>
    <string name="serviceCenter">고객센터</string>
    <string name="date_hour">날짜/시간</string>
    <string name="chatting">채팅하기</string>
    <string name="selectDate">날짜를 선택하세요</string>
    <string name="selectTime">시간을 선택하세요</string>
    <string name="listButtonLetter">대화방 목록보기</string>
    <string name="mapButtonLetter">지도에서 찾기</string>
    <string name="managerView">관리자 화면</string>
    <string name="map">지도</string>
    <string name="myPage">내정보</string>
    <string name="manageUser">회원정보 관리</string>
    <string name="userDelete">회원정보 삭제</string>
    <string name="userNotDelete">회원정보 삭제 취소</string>
    <string name="manageQnA">문의사항 답변</string>
    <string name="manageEvent">이벤트 관리</string>
    <string name="selectRest">선택 식당 대화방 목록</string>
    <string name="close">닫기</string>
    <string name="validate">중복검사</string>
    <string name="hashTitle">하단제목</string>

    <string name="hint_id">아이디를 입력하세요</string>
    <string name="hint_pwd">비밀번호를 입력하세요</string>
    <string name="hint_pwd2">한번 더 입력하세요</string>
    <string name="hint_name">이름을 입력하세요</string>
    <string name="hint_nickname">별명을 입력하세요</string>
    <string name="hint_otherEditText">기타 요구사항을 입력하세요</string>
    <string name="hint_hour">13</string>
    <string name="hint_minute">00</string>
    <string name="hint_roomTitle">매운찜닭 3인팟</string>
    <string name="hint_changePwd">변경할 비밀번호 입력</string>
    <string name="hint_changeNickname">변경할 닉네임 입력</string>
    <string name="hint_hashTitle">하단제목 입력</string>

    <string name="error">에러발생</string>
    <string name="defaultValue">default</string>
    <string name="defaultPersonnel">2명</string>
    <string name="defaultTitle">방제목은최대열한글자임</string>
    <string name="defaultOption">#성별무관 #여섯글자적기</string>
    <string name="defaultInfo">고수찜닭 / 10월 10일 / 13:00</string>
</resources>
