<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/createRoomButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_frame"
        android:gravity="center_horizontal"
        android:onClick="mOnClick"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherEditText" />

    <EditText
        android:id="@+id/otherEditText"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="70dp"
        android:hint="@string/hint_otherEditText"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/roomTitleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/hint_roomTitle"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/Black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/roomTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/hopeRestaurantCheckBox" />

    <EditText
        android:id="@+id/roomHashEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/hint_hashTitle"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/Black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/roomTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/roomTitleEditText" />

    <TextView
        android:id="@+id/personnelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:text="@string/reqPersonnel"
        android:textColor="@color/Black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_hourTextView" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/reqGender"
        android:textColor="@color/Black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personnelTextView" />

    <TextView
        android:id="@+id/roomTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/roomTitle"
        android:textColor="@color/Black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeRestaurantTextView" />

    <TextView
        android:id="@+id/roomHashTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/hashTitle"
        android:textColor="@color/Black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomTitleTextView" />

    <TextView
        android:id="@+id/otherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/other"
        android:textColor="@color/Black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderTextView" />

    <TextView
        android:id="@+id/day_hourTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="65dp"
        android:text="@string/date_hour"
        android:textColor="@color/Black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomTitleTextView" />

    <TextView
        android:id="@+id/homeRestaurantTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/hopeRest"
        android:textColor="@color/Black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoomTextView" />

    <CheckBox
        android:id="@+id/hopeRestaurantCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginTop="71dp"
        android:text="@string/noProb"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoomTextView" />

    <CheckBox
        android:id="@+id/manCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/man"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/genderTextView"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <CheckBox
        android:id="@+id/womanCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:text="@string/woman"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/manCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/createRoomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="115dp"
        android:gravity="center_horizontal"
        android:text="@string/roomCreate"
        android:textColor="@color/Black"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/personnelTextView"
        app:layout_constraintTop_toBottomOf="@+id/hourSelectButton">

        <Spinner
            android:id="@+id/spinner_personnel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/personnel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeRestaurantTextView"
        app:layout_constraintTop_toBottomOf="@+id/createRoomTextView">

        <Spinner
            android:id="@+id/spinner_restName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/restName" />
    </LinearLayout>

    <Button
        android:id="@+id/dateSelectButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="179dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_frame"
        android:onClick="mOnClick"
        android:text="@string/selectDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomTitleEditText" />

    <Button
        android:id="@+id/hourSelectButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="179dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_frame"
        android:onClick="mOnClick"
        android:text="@string/selectTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateSelectButton" />


</androidx.constraintlayout.widget.ConstraintLayout>